# paper-mind

./: .gitignore  README.md
backend/: app.py  config.py  pyproject.toml  requirements.txt
backend/data/: paper_extract.txt
backend/notebooks/: init_pipeline.ipynb  semantic_search.ipynb
backend/services/: ai_service.py  pdf_service.py  supabase_service.py  vector_service.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/app/: chat-pdf.tsx  list-pdf.tsx  navbar.tsx  view-pdf.tsx
frontend/src/services/: files.ts
frontend/src/store/: pdf-state.ts
frontend/src/types/: db.ts
