[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.3",
    "cryptography>=46.0.6",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "google-genai>=1.68.0",
    "langchain>=1.2.13",
    "langchain-text-splitters>=1.1.1",
    "numpy>=2.4.3",
    "pinecone>=8.1.0",
    "pymupdf>=1.27.2.2",
    "python-dotenv>=1.2.2",
    "requests>=2.33.0",
    "sentence-transformers>=5.3.0",
    "supabase>=2.28.3",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "transformers>=5.4.0",
    "urllib3>=2.6.3",
]
